<resources>
    <string name="app_name">Quiz App</string>
    <string name="question1">Question 1</string>
    <string name="question2">Question 2</string>
    <string name="question3">Question 3</string>
    <string name="question4">Question 4</string>
    <string name="question5">Question 5</string>
    <string name="body1">What is APK in android?</string>
    <string name="checkbox1">Android Package</string>
    <string name="checkbox2">Android Pack</string>
    <string name="checkbox3">Android Packaging Kit</string>
    <string name="checkbox4">None of the above.</string>
    <string name="body2">Who is the main founder of Android. Inc?</string>
    <string name="body3">Select ALL valid view types:</string>
    <string name="body4">What view to use for Checkbox?</string>
    <string name="body5">Is Android based on Linex kernal?</string>
    <string name="answer1">Name?</string>
    <string name="checkbox5">TextView</string>
    <string name="checkbox6">RadioView</string>
    <string name="checkbox7">ImageView</string>
    <string name="checkbox8">EditorView</string>
    <string name="checkbox9">ScrollView</string>
    <string name="radiobutton1">CheckBox</string>
    <string name="radiobutton2">CheckView</string>
    <string name="radiobutton3">TickView</string>
    <string name="radiobutton4">Yes</string>
    <string name="radiobutton5">No</string>
    <string name="submit">Submit</string>
    <string name="reset">Reset</string>
</resources>
