<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/parent"
    tools:context="com.example.android.quizapp.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/parent"
        app:layout_constraintStart_toStartOf="@id/parent"
        app:layout_constraintTop_toTopOf="@id/parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:orientation="vertical">

            <TextView
                style="@style/HeaderTextStyle"
                android:text="@string/question1" />

            <TextView
                style="@style/bodyTextStyle"
                android:text="@string/body1" />

            <CheckBox
                android:id="@+id/checkbox_1"
                style="@style/checkboxStyle"
                android:onClick="itemClicked1"
                android:text="@string/checkbox1"/>

            <CheckBox
                android:id="@+id/checkbox_2"
                style="@style/checkboxStyle"
                android:onClick="itemClicked2"
                android:text="@string/checkbox2"/>

            <CheckBox
                android:id="@+id/checkbox_3"
                style="@style/checkboxStyle"
                android:onClick="itemClicked3"
                android:text="@string/checkbox3"/>

            <CheckBox
                android:id="@+id/checkbox_4"
                style="@style/checkboxStyle"
                android:onClick="itemClicked4"
                android:text="@string/checkbox4"
                android:layout_marginBottom="16dp"/>

            <TextView
                style="@style/HeaderTextStyle"
                android:text="@string/question2" />

            <TextView
                style="@style/bodyTextStyle"
                android:text="@string/body2" />

            <EditText
                android:id="@+id/name_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/answer1"
                android:layout_marginBottom="16dp"
                android:inputType="textCapWords" />

            <TextView
                style="@style/HeaderTextStyle"
                android:text="@string/question3" />

            <TextView
                style="@style/bodyTextStyle"
                android:text="@string/body3" />
            <CheckBox
                android:id="@+id/checkbox_5"
                style="@style/checkboxStyle"
                android:onClick="itemClicked5"
                android:text="@string/checkbox5"/>

            <CheckBox
                android:id="@+id/checkbox_6"
                style="@style/checkboxStyle"
                android:onClick="itemClicked6"
                android:text="@string/checkbox6" />

            <CheckBox
                android:id="@+id/checkbox_7"
                style="@style/checkboxStyle"
                android:onClick="itemClicked7"
                android:text="@string/checkbox7"/>

            <CheckBox
                android:id="@+id/checkbox_8"
                style="@style/checkboxStyle"
                android:onClick="itemClicked8"
                android:text="@string/checkbox8"/>

            <CheckBox
                android:id="@+id/checkbox_9"
                style="@style/checkboxStyle"
                android:onClick="itemClicked9"
                android:text="@string/checkbox9"
                android:layout_marginBottom="16dp"/>

            <TextView
                style="@style/HeaderTextStyle"
                android:text="@string/question4" />

            <TextView
                style="@style/bodyTextStyle"
                android:text="@string/body4" />

            <RadioGroup
                android:id="@+id/radioGroup_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="16dp">
                <RadioButton
                    android:id="@+id/radio_button_1"
                    style="@style/RadioBottonStyle"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/radiobutton1" />
                <RadioButton
                    android:id="@+id/radio_button_2"
                    style="@style/RadioBottonStyle"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/radiobutton2" />
                <RadioButton
                    android:id="@+id/radio_button_3"
                    style="@style/RadioBottonStyle"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/radiobutton3" />
            </RadioGroup>

            <TextView
                style="@style/HeaderTextStyle"
                android:text="@string/question5" />

            <TextView
                style="@style/bodyTextStyle"
                android:text="@string/body5" />

            <RadioGroup
                android:id="@+id/radioGroup_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="16dp">
                <RadioButton
                    android:id="@+id/radio_button_4"
                    style="@style/RadioBottonStyle"
                    android:onClick="onRadioButtonClicked2"
                    android:text="@string/radiobutton4" />
                <RadioButton
                    android:id="@+id/radio_button_5"
                    style="@style/RadioBottonStyle"
                    android:onClick="onRadioButtonClicked2"
                    android:text="@string/radiobutton5" />
            </RadioGroup>


        </LinearLayout>

    </ScrollView>

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="50"/>

    <LinearLayout
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="#82757575"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@id/parent"
        tools:layout_editor_absoluteX="104dp">

        <Button
            android:id="@+id/button_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="submitQuiz"
            android:textColor="#FFFFFF"
            android:text="@string/submit"
            app:layout_constraintEnd_toStartOf="@id/guideline" />

        <Button
            android:id="@+id/button_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:onClick="resetQuiz"
            android:text="@string/reset"
            app:layout_constraintStart_toEndOf="@id/guideline" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>